resolved the mf bug with restTemplate